test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/cast_to_array_type_2.plx
pub fn main(none) i32 {
    arr: [10]i64;
    #  casts to array type are illegal
    return cast<[10]*i32>(arr)
}
